# depgraph

./: .gitignore  Cargo.toml  README.md  download.js  exe.js  index.d.ts  index.js  jsconfig.json  package-lock.json  package.json  test.js  type.ts
.circleci/: config.yml
.github/workflows/: CI.yml  npm-publish.yml  release.yml  rust.yml
__test__/: simple.spec.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
src/: lib.rs  main.rs
