[package]
edition = "2021"
name = "abihf_depgraph"
version = "0.2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
anyhow = "1.0.56"
argh = "0.1.7"
napi = { version = "2.2.0", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.2.0"
serde = "1.0.136"
serde_json = { version = "1.0.79", features = ["std"] }
swc = "0.158.0"
swc_atoms = "0.2.9"
swc_ecma_dep_graph = "0.67.0"
swc_ecma_parser = "0.95.0"
tokio = { version = "1.17.0", features = ["fs", "rt-multi-thread", "sync", "macros", "io-std", "io-util"] }

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
strip = true
